--- a/index.html
+++ b/index.html
@@ -17,13 +17,10 @@
             <div class="slider-wrapper" tabindex="0">
 
                 <div class="item">
-                    <img src="img/01.jpg" alt="Svezia" />
+                    <img :src="slides[currentSlide].image" :alt="slides[currentSlide].title" />
                     <div class="text">
-                        <h3>Svezia</h3>
-                        <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et temporibus voluptatum suscipit tempore aliquid deleniti aut
-                            veniam inventore eligendi ex ad ullam, cumque provident totam omnis, magnam dolores dolorum corporis.
-                        </p>
+                        <h3>{{slides[currentSlide].title}}</h3>
+                        <p>{{slides[currentSlide].text}}</p>
                     </div>
                 </div>
 
@@ -31,19 +28,19 @@
                     <div class="prev"></div>
                     <div class="next"></div>
                     <div class="thumb active">
-                        <img src="img/01.jpg" alt="Svezia"/>
+                        <img :src="slides[0].image" :alt="slides[0].title"/>
                     </div>
                     <div class="thumb">
-                        <img src="img/02.jpg" alt="Svizzera" />
+                        <img :src="slides[1].image" :alt="slides[1].title" />
                     </div>
                     <div class="thumb">
-                        <img src="img/03.jpg" alt="Gran Bretagna" />
+                        <img :src="slides[2].image" :alt="slides[2].title" />
                     </div>
                     <div class="thumb">
-                        <img src="img/04.jpg" alt="Germania" />
+                        <img :src="slides[3].image" :alt="slides[3].title" />
                     </div>
                     <div class="thumb">
-                        <img src="img/05.jpg" alt="Paradise" />
+                        <img :src="slides[4].images" :alt="slides[4].title" />
                     </div>
                 </div>
 
