--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 </div>
 
                 <div class="thumbs">
-                    <div class="prev"></div>
-                    <div class="next"></div>
+                    <div class="prev" @click="prevSlide"></div>
+                    <div class="next" @click="nextSlide"></div>
                     <div class="thumb active">
                         <img :src="slides[0].image" :alt="slides[0].title"/>
                     </div>
@@ -40,7 +40,7 @@
                         <img :src="slides[3].image" :alt="slides[3].title" />
                     </div>
                     <div class="thumb">
-                        <img :src="slides[4].images" :alt="slides[4].title" />
+                        <img :src="slides[4].image" :alt="slides[4].title" />
                     </div>
                 </div>
 
