--- a/index.html
+++ b/index.html
@@ -27,20 +27,8 @@
                 <div class="thumbs">
                     <div class="prev" @click="prevSlide"></div>
                     <div class="next" @click="nextSlide"></div>
-                    <div class="thumb active">
-                        <img :src="slides[0].image" :alt="slides[0].title"/>
-                    </div>
-                    <div class="thumb">
-                        <img :src="slides[1].image" :alt="slides[1].title" />
-                    </div>
-                    <div class="thumb">
-                        <img :src="slides[2].image" :alt="slides[2].title" />
-                    </div>
-                    <div class="thumb">
-                        <img :src="slides[3].image" :alt="slides[3].title" />
-                    </div>
-                    <div class="thumb">
-                        <img :src="slides[4].image" :alt="slides[4].title" />
+                    <div class="thumb" v-for="(element, currentSlide) in slides">
+                        <img :src="slides[currentSlide].image" :alt="slides[currentSlide].title" @click="thumbChooseSlide"/>
                     </div>
                 </div>
 
